Correcting errors on isomap model

--- a/functions.ipynb
+++ b/functions.ipynb
@@ -1567,8 +1567,9 @@
         "    # Normalization\n",
         "#     scaler = MinMaxScaler()\n",
         "\n",
-        "    # X_train_scaled = scaler.fit_transform(X_train)\n",
-        "    # X_test_scaled = scaler.transform(X_test)\n",
+        "    X_train_scaled = scaler.fit_transform(X_train)\n",
+        "    X_test_scaled = scaler.transform(X_test)\n",
+        "    \n",
         "    # pca = PCA()    \n",
         "    # X_iso_train = pca.fit_transform(X_train_scaled)\n",
         "    \n",
@@ -1581,14 +1582,14 @@
         "    print(\"Starting ISOMAP...\")\n",
         "    start = time.time()\n",
         "    iso = Isomap(n_components=n_to_reach)    \n",
-        "    X_iso_train = pca.fit_transform(X_train_scaled)\n",
+        "    X_iso_train = iso.fit_transform(X_train_scaled)\n",
         "    X_iso_train = pd.DataFrame(X_iso_train)\n",
         "    X_iso_train.index = X_train.index\n",
         "    X_iso_train = pd.merge(X_iso_train, df[df.columns[-i:]], left_index=True, right_index=True)\n",
         "    X_iso_train.columns = np.arange(X_iso_train.shape[1]) \n",
         "\n",
         "\n",
-        "    X_iso_test = pca.transform(X_test_scaled)\n",
+        "    X_iso_test = iso.transform(X_test_scaled)\n",
         "    X_iso_test = pd.DataFrame(X_iso_test)\n",
         "    X_iso_test.index = X_test.index\n",
         "    X_iso_test = pd.merge(X_iso_test, df[df.columns[-i:]], left_index=True, right_index=True)\n",
